src/test/deca/context/valid/created/simple-cast-class.deca
class A{
	
}
class B extends A{

}
{
	A a;
	B b;
	b = (B) a;
}