src/test/deca/context/invalid/created/print-bool.deca
{
	bool a = true;
	print(a);
}